# rust-sandbox

./: Cargo.toml  dbg.txt
benches/: ten_tick_benchmark.rs
main_bin/: Cargo.toml
main_bin/src/: main.rs
main_lib/: Cargo.toml
main_lib/benches/: ten_tick_benchmark.rs
src/: component.rs  entity.rs  heap.rs  lib.rs  main.rs  state.rs  stellar_old.rs  system.rs  world.rs
src/component/: moon.rs  orbit.rs  planet.rs  pos.rs  star.rs
src/entity/: selestial.rs
src/system/: orbit.rs
