[package]
name = "rust-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nalgebra = "0.32.5"
rayon = "1.10.0"
la-arena = "0.3.1"
strum = "0.26.2"
strum_macros = "0.26.2"
once_cell = "1.19.0"
rustc-hash = "1.1.0"
dashmap = "5.5.3"
